--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <script>
     const result = document.getElementById('result');
 
-    fetch('test.wasm')
+    fetch('test2.wasm')
     .then(response => {
         var mime = response.headers.get('Content-Type');
         var encoding = response.headers.get('Content-Encoding');
         var status = (mime === 'application/wasm') ? 'SUCCESS' : 'FAIL';
-        result.innerText = status + ': test.wasm has Content-Type "' + mime + '" and Content-Encoding "' + encoding + '"';
+        result.innerText = status + ': test2.wasm has Content-Type "' + mime + '" and Content-Encoding "' + encoding + '"';
     })
     .catch(error => {
         result.innerText = "Failed to fetch: " + String(error);
