--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script>
     const result = document.getElementById('result');
 
-    const start = performace.now();
+    const start = performance.now();
 
     fetch('tanks.wasm')
     .then(response => {
