Revert "Fix typo"
This reverts commit 1c1fdd63812a3493bc309a2ed9ee3c8e71e2b9bf.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         return WebAssembly.compileStreaming(response);
     })
     .then(module => {
+        var dt = performance.now() - start;
         result.innerText += " and compileStreaming resolved successfully";
     })
     .catch(error => {
