--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <script>
     const result = document.getElementById('result');
 
+    const start = performance.now();
+
     fetch('tanks.wasm')
     .then(response => {
         var mime = response.headers.get('Content-Type');
@@ -19,7 +21,7 @@
     })
     .then(module => {
         var dt = performance.now() - start;
-        result.innerText += " and compileStreaming resolved successfully";
+        result.innerText += " and took " + dt + "ms to fetch+compileStreaming";
     })
     .catch(error => {
         result.innerText = "Failed with error: " + String(error);
